Bump versions, remove redisson, graceful shutdown