@@ -1,3 +1,6 @@
+import com.github.benmanes.gradle.versions.updates.DependencyUpdatesTask
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 plugins {
     idea
     jacoco
@@ -6,7 +9,8 @@ plugins {
     id("pl.allegro.tech.build.axion-release")
     id("com.github.fhermansson.assertj-generator")
     id("org.jmailen.kotlinter")
-    id("se.ascp.gradle.gradle-versions-filter")
+    id("com.github.ben-manes.versions")
+    id("io.spring.dependency-management")
 }
 
 group = "se.svt.oss"
@@ -21,21 +25,32 @@ repositories {
 }
 
 kotlin {
-    jvmToolchain(17)
+    jvmToolchain(21)
+    compilerOptions {
+        freeCompilerArgs.addAll("-Xjsr305=strict")
+    }
 }
+
+fun isNonStable(version: String): Boolean {
+    val stableKeyword = listOf("RELEASE", "FINAL", "GA").any { version.uppercase().contains(it) }
+    val regex = "^[0-9,.v-]+(-r)?$".toRegex()
+    val isStable = stableKeyword || regex.matches(version)
+    return isStable.not()
+}
+
+tasks.withType<DependencyUpdatesTask> {
+    rejectVersionIf {
+        isNonStable(candidate.version)
+    }
+}
+
 tasks.lintKotlinTest {
     source = (source - fileTree("src/test/generated-java")).asFileTree
 }
 tasks.formatKotlinTest {
     source = (source - fileTree("src/test/generated-java")).asFileTree
 }
-kotlinter {
-    disabledRules = arrayOf(
-        "import-ordering",
-        "trailing-comma-on-declaration-site",
-        "trailing-comma-on-call-site"
-    )
-}
+
 assertjGenerator {
     classOrPackageNames = arrayOf(
         "se.svt.oss.encore.model",
@@ -44,20 +59,24 @@ assertjGenerator {
     entryPointPackage = "se.svt.oss.encore"
     useJakartaAnnotations = true
 }
-
-val redissonVersion = "3.23.2"
-
+tasks.test {
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
+}
+dependencyManagement {
+    imports {
+        mavenBom("org.springframework.boot:spring-boot-dependencies:3.4.3")
+        mavenBom("org.springframework.cloud:spring-cloud-dependencies:2024.0.0")
+    }
+}
 dependencies {
-    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.9.10"))
-    implementation(platform("org.springframework.boot:spring-boot-dependencies:3.1.3"))
-    implementation(platform("org.springframework.cloud:spring-cloud-dependencies:2022.0.4"))
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
-    implementation("io.github.microutils:kotlin-logging:3.0.5")
-    implementation("org.redisson:redisson-spring-boot-starter:$redissonVersion")
-    implementation("org.redisson:redisson-spring-data-31:$redissonVersion") // match boot version
-    testImplementation("org.springframework.boot:spring-boot-starter-test")
+    implementation("io.github.oshai:kotlin-logging-jvm:7.0.5")
+    implementation("org.springframework.boot:spring-boot-starter-data-redis")
+    testImplementation("org.springframework.boot:spring-boot-starter-test") {
+        exclude(group = "org.mockito")
+    }
     testImplementation("org.assertj:assertj-core")
-    testImplementation("io.mockk:mockk:1.13.7")
+    testImplementation("io.mockk:mockk:1.13.17")
 }
 
 
